--- a/index.html
+++ b/index.html
@@ -2,34 +2,39 @@
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>Happy Valentine's Day 💐</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Noto+Serif+SC:wght@400;600&display=swap');
 * { margin: 0; padding: 0; box-sizing: border-box; }
+html { touch-action: manipulation; }
 body {
   background: linear-gradient(160deg, #fdf6f0 0%, #fce4ec 30%, #f8e8e0 60%, #fdf6f0 100%);
-  min-height: 100vh; display: flex; flex-direction: column;
-  align-items: center;
+  min-height: 100vh; min-height: 100dvh;
+  display: flex; flex-direction: column; align-items: center;
   font-family: 'Noto Serif SC', 'Georgia', serif; color: #5d4037;
   overflow-x: hidden;
+  -webkit-text-size-adjust: 100%;
 }
 h1 {
   font-family: 'Great Vibes', cursive;
-  font-size: 3.2rem; margin: 50px 0 8px; letter-spacing: 2px; font-weight: 400;
-  color: #c2185b;
+  font-size: clamp(1.8rem, 7vw, 3.2rem);
+  margin: 40px 16px 6px; letter-spacing: 2px; font-weight: 400;
+  color: #c2185b; text-align: center;
   text-shadow: 0 2px 8px rgba(194,24,91,0.15);
 }
 .subtitle {
   font-family: 'Great Vibes', cursive;
-  font-size: 1.3rem; color: #ad8b73; margin-bottom: 36px;
-  letter-spacing: 1px;
+  font-size: clamp(0.9rem, 3vw, 1.3rem);
+  color: #ad8b73; margin-bottom: 24px;
+  letter-spacing: 1px; text-align: center; padding: 0 16px;
 }
 .bouquet-wrap {
   position: relative; display: inline-block;
+  width: min(92vw, 860px);
 }
 .bouquet-wrap img {
-  max-width: 92vw; width: 860px; height: auto; display: block;
+  width: 100%; height: auto; display: block;
   filter: drop-shadow(0 8px 30px rgba(194,24,91,0.12));
 }
 .hotspot {
@@ -37,7 +42,7 @@ h1 {
   transition: all 0.3s ease;
   border: 2px solid transparent;
 }
-.hotspot:hover {
+.hotspot:hover, .hotspot:active {
   background: rgba(194,24,91,0.08);
   border-color: rgba(194,24,91,0.25);
   box-shadow: 0 0 20px rgba(194,24,91,0.18);
@@ -47,50 +52,73 @@ h1 {
   position: fixed; pointer-events: none; opacity: 0;
   transition: opacity 0.25s ease;
   background: rgba(255,255,255,0.96); border: 1px solid rgba(194,24,91,0.2);
-  border-radius: 12px; padding: 14px 20px; min-width: 240px; max-width: 320px;
+  border-radius: 12px; padding: 14px 20px; min-width: 200px; max-width: 300px;
   backdrop-filter: blur(8px); z-index: 100;
   box-shadow: 0 6px 24px rgba(0,0,0,0.08);
 }
 .tooltip.show { opacity: 1; }
-.tooltip .t-title { font-size: 1.05rem; color: #c2185b; margin-bottom: 3px; font-weight: 600; }
-.tooltip .t-artist { font-size: 0.88rem; color: #8d6e63; }
-.tooltip .t-year { font-size: 0.8rem; color: #ad8b73; margin-top: 2px; }
+.tooltip .t-title { font-size: 1rem; color: #c2185b; margin-bottom: 3px; font-weight: 600; }
+.tooltip .t-artist { font-size: 0.85rem; color: #8d6e63; }
+.tooltip .t-year { font-size: 0.78rem; color: #ad8b73; margin-top: 2px; }
+/* 弹窗 - 固定视口定位，不受缩放影响 */
 .modal-overlay {
-  display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-  background: rgba(253,246,240,0.88); z-index: 1000;
+  display: none; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; height: 100dvh;
+  background: rgba(253,246,240,0.92); z-index: 10000;
   justify-content: center; align-items: center;
   backdrop-filter: blur(6px);
 }
 .modal-overlay.active { display: flex; }
 .modal {
   background: #fff; border: 1px solid rgba(194,24,91,0.15);
-  border-radius: 20px; max-width: 780px; width: 92%; max-height: 90vh;
+  border-radius: 16px; width: min(92vw, 780px); max-height: 88vh; max-height: 88dvh;
   overflow-y: auto; position: relative;
   box-shadow: 0 16px 48px rgba(194,24,91,0.12);
+  -webkit-overflow-scrolling: touch;
 }
 .modal-close {
-  position: absolute; top: 14px; right: 18px; font-size: 1.6rem;
-  color: #ad8b73; cursor: pointer; z-index: 10; line-height: 1;
-  width: 36px; height: 36px; display: flex; align-items: center; justify-content: center;
+  position: sticky; top: 0; float: right; margin: 10px 12px 0 0;
+  font-size: 1.5rem; color: #ad8b73; cursor: pointer; z-index: 10; line-height: 1;
+  width: 40px; height: 40px; display: flex; align-items: center; justify-content: center;
   border-radius: 50%; transition: all 0.2s;
+  background: rgba(255,255,255,0.85); backdrop-filter: blur(4px);
 }
 .modal-close:hover { background: #fce4ec; color: #c2185b; }
 .modal-img {
-  width: 100%; border-radius: 20px 20px 0 0; display: block;
-  max-height: 480px; object-fit: contain; background: #fdf6f0;
+  width: 100%; display: block;
+  max-height: 50vh; object-fit: contain; background: #fdf6f0;
 }
-.modal-info { padding: 28px 36px 32px; }
-.modal-info h2 { font-size: 1.45rem; color: #c2185b; margin-bottom: 6px; }
-.modal-info .m-artist { font-size: 1rem; color: #8d6e63; margin-bottom: 4px; }
-.modal-info .m-meta { font-size: 0.85rem; color: #ad8b73; margin-bottom: 18px; }
+.modal-info { padding: 20px 24px 28px; }
+.modal-info h2 { font-size: clamp(1.1rem, 3.5vw, 1.45rem); color: #c2185b; margin-bottom: 6px; }
+.modal-info .m-artist { font-size: clamp(0.85rem, 2.5vw, 1rem); color: #8d6e63; margin-bottom: 4px; }
+.modal-info .m-meta { font-size: clamp(0.75rem, 2vw, 0.85rem); color: #ad8b73; margin-bottom: 14px; }
 .modal-info .m-desc {
-  font-size: 0.95rem; line-height: 1.9; color: #5d4037;
-  border-top: 1px solid #fce4ec; padding-top: 16px;
+  font-size: clamp(0.85rem, 2.5vw, 0.95rem); line-height: 1.8; color: #5d4037;
+  border-top: 1px solid #fce4ec; padding-top: 14px;
 }
+/* 音乐按钮 */
+.music-btn {
+  position: fixed; bottom: 20px; right: 20px; z-index: 500;
+  width: 44px; height: 44px; border-radius: 50%;
+  background: rgba(255,255,255,0.9); border: 1px solid rgba(194,24,91,0.2);
+  cursor: pointer; display: flex; align-items: center; justify-content: center;
+  font-size: 1.3rem; box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+  transition: all 0.3s; backdrop-filter: blur(4px);
+}
+.music-btn:hover { background: #fce4ec; transform: scale(1.08); }
+.music-btn.playing { animation: spin 3s linear infinite; }
+@keyframes spin { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
 footer {
-  margin: 36px 0 50px; font-size: 0.82rem; color: #c9a89a; letter-spacing: 2px;
+  margin: 28px 0 40px; font-size: 0.78rem; color: #c9a89a; letter-spacing: 2px;
+  text-align: center; padding: 0 16px;
 }
 footer span { color: #e91e63; }
+@media (max-width: 600px) {
+  h1 { margin-top: 28px; }
+  .subtitle { margin-bottom: 16px; }
+  .modal { border-radius: 12px; }
+  .modal-info { padding: 16px 18px 22px; }
+  .tooltip { display: none; }
+}
 </style>
 </head>
 <body>
@@ -121,6 +149,8 @@ footer span { color: #e91e63; }
   </div>
 </div>
 
+<div class="music-btn" id="musicBtn" title="播放/暂停音乐">🎵</div>
+
 <footer>Made with <span>&hearts;</span> from the world&#39;s greatest paintings</footer>
 
 <script>
@@ -128,31 +158,35 @@ const flowers = [{"id": "004", "title": "Vase of Flowers", "artist": "Jan Davids
 const wrap = document.getElementById('bouquetWrap');
 const tooltip = document.getElementById('tooltip');
 const overlay = document.getElementById('modalOverlay');
+const isMobile = 'ontouchstart' in window || navigator.maxTouchPoints > 0;
 
 flowers.forEach(f => {
   const spot = document.createElement('div');
   spot.className = 'hotspot';
-  const rPct = Math.min(f.wPct, f.hPct) * 0.42;
+  const rPct = Math.min(f.wPct, f.hPct) * (isMobile ? 0.52 : 0.42);
   spot.style.left = (f.cxPct - rPct) + '%';
   spot.style.top = (f.cyPct - rPct) + '%';
   spot.style.width = (rPct * 2) + '%';
   spot.style.height = (rPct * 2) + '%';
 
-  spot.addEventListener('mouseenter', () => {
-    document.getElementById('tipTitle').textContent = '\u300A' + f.title + '\u300B';
-    document.getElementById('tipArtist').textContent = f.artist;
-    document.getElementById('tipYear').textContent = f.year + ' \u00B7 ' + f.location;
-    tooltip.classList.add('show');
-  });
-  spot.addEventListener('mousemove', (e) => {
-    let tx = e.clientX + 18, ty = e.clientY - 70;
-    if (tx + 260 > window.innerWidth) tx = e.clientX - 270;
-    if (ty < 10) ty = e.clientY + 20;
-    tooltip.style.left = tx + 'px';
-    tooltip.style.top = ty + 'px';
-  });
-  spot.addEventListener('mouseleave', () => tooltip.classList.remove('show'));
-  spot.addEventListener('click', () => {
+  if (!isMobile) {
+    spot.addEventListener('mouseenter', () => {
+      document.getElementById('tipTitle').textContent = '\u300A' + f.title + '\u300B';
+      document.getElementById('tipArtist').textContent = f.artist;
+      document.getElementById('tipYear').textContent = f.year + ' \u00B7 ' + f.location;
+      tooltip.classList.add('show');
+    });
+    spot.addEventListener('mousemove', (e) => {
+      let tx = e.clientX + 18, ty = e.clientY - 70;
+      if (tx + 260 > window.innerWidth) tx = e.clientX - 270;
+      if (ty < 10) ty = e.clientY + 20;
+      tooltip.style.left = tx + 'px';
+      tooltip.style.top = ty + 'px';
+    });
+    spot.addEventListener('mouseleave', () => tooltip.classList.remove('show'));
+  }
+  spot.addEventListener('click', (e) => {
+    e.preventDefault();
     tooltip.classList.remove('show');
     document.getElementById('modalImg').src = f.origFile || '';
     document.getElementById('modalTitle').textContent = '\u300A' + f.title + '\u300B';
@@ -160,13 +194,78 @@ flowers.forEach(f => {
     document.getElementById('modalMeta').textContent = f.year + ' \u00B7 ' + f.location;
     document.getElementById('modalDesc').textContent = f.desc;
     overlay.classList.add('active');
+    document.body.style.overflow = 'hidden';
   });
   wrap.appendChild(spot);
 });
 
-document.getElementById('modalClose').onclick = () => overlay.classList.remove('active');
-overlay.addEventListener('click', e => { if (e.target === overlay) overlay.classList.remove('active'); });
-document.addEventListener('keydown', e => { if (e.key === 'Escape') overlay.classList.remove('active'); });
+function closeModal() {
+  overlay.classList.remove('active');
+  document.body.style.overflow = '';
+}
+document.getElementById('modalClose').onclick = closeModal;
+overlay.addEventListener('click', e => { if (e.target === overlay) closeModal(); });
+document.addEventListener('keydown', e => { if (e.key === 'Escape') closeModal(); });
+
+/* ===== 氛围音乐 - Web Audio API 生成钢琴旋律 ===== */
+let audioCtx = null;
+let musicPlaying = false;
+let musicTimer = null;
+const musicBtn = document.getElementById('musicBtn');
+
+const MELODY = [
+  [261.63,1.2],[329.63,0.8],[392.00,1.0],[349.23,0.8],[329.63,1.2],[293.66,0.8],
+  [261.63,1.0],[329.63,0.8],[392.00,1.2],[440.00,0.8],[392.00,1.0],[349.23,1.2],
+  [329.63,0.8],[293.66,1.0],[261.63,1.2],[329.63,0.8],[293.66,1.0],[261.63,1.5],
+  [349.23,1.0],[329.63,0.8],[293.66,1.0],[329.63,0.8],[261.63,1.2],[293.66,0.8],
+  [329.63,1.0],[392.00,1.2],[349.23,0.8],[329.63,1.0],[293.66,1.2],[261.63,1.5],
+];
+
+function playNote(freq, startTime, dur) {
+  const osc = audioCtx.createOscillator();
+  const gain = audioCtx.createGain();
+  const filter = audioCtx.createBiquadFilter();
+  osc.type = 'sine';
+  osc.frequency.value = freq;
+  filter.type = 'lowpass';
+  filter.frequency.value = 2000;
+  gain.gain.setValueAtTime(0, startTime);
+  gain.gain.linearRampToValueAtTime(0.12, startTime + 0.05);
+  gain.gain.exponentialRampToValueAtTime(0.06, startTime + dur * 0.4);
+  gain.gain.exponentialRampToValueAtTime(0.001, startTime + dur);
+  osc.connect(filter);
+  filter.connect(gain);
+  gain.connect(audioCtx.destination);
+  osc.start(startTime);
+  osc.stop(startTime + dur);
+}
+
+function scheduleLoop() {
+  if (!musicPlaying) return;
+  let t = audioCtx.currentTime + 0.1;
+  MELODY.forEach(([freq, dur]) => {
+    playNote(freq, t, dur * 1.1);
+    playNote(freq * 0.5, t, dur * 1.3);
+    t += dur * 0.85;
+  });
+  const loopLen = MELODY.reduce((s, [, d]) => s + d * 0.85, 0);
+  musicTimer = setTimeout(scheduleLoop, loopLen * 1000 - 500);
+}
+
+musicBtn.addEventListener('click', () => {
+  if (!audioCtx) audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+  if (musicPlaying) {
+    musicPlaying = false;
+    clearTimeout(musicTimer);
+    musicBtn.classList.remove('playing');
+    musicBtn.textContent = '🎵';
+  } else {
+    musicPlaying = true;
+    musicBtn.classList.add('playing');
+    musicBtn.textContent = '🎶';
+    scheduleLoop();
+  }
+});
 </script>
 </body>
 </html>
