add OG meta tags for social sharing preview

--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>Happy Valentine's Day</title>
+<meta property="og:title" content="Happy Valentine's Day 💐">
+<meta property="og:description" content="Every flower holds the colors of a masterpiece, just for you">
+<meta property="og:image" content="https://flowers.banzhang.icu/og-image.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:url" content="https://flowers.banzhang.icu">
+<meta property="og:type" content="website">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Happy Valentine's Day 💐">
+<meta name="twitter:description" content="Every flower holds the colors of a masterpiece, just for you">
+<meta name="twitter:image" content="https://flowers.banzhang.icu/og-image.jpg">
+<link rel="icon" type="image/jpeg" href="og-image.jpg">
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Noto+Serif+SC:wght@400;600&display=swap');
 *{margin:0;padding:0;box-sizing:border-box}
